syntax = "proto3";

option csharp_namespace = "Basics";

package Basics;

// The greeting service definition.
service Greeter {
  // Sends a greeting
  rpc SayHello (HelloRequest) returns (HelloReply);
}

// The request message containing the user's name.
message HelloRequest {
  string name = 1;
}

// The response message containing the greetings.
message HelloReply {
  string message = 1;
}


service Order {
 
  rpc Pay (OrderParam) returns (OrderResult);
}

message OrderParam {
  string orderId = 1;
}

message OrderResult {
  string status = 1;
}
